--- a/requirements.txt
+++ b/requirements.txt
@@ -13,11 +13,15 @@ cffi==1.17.1
 charset-normalizer==3.4.0
 colorama==0.4.6
 comm==0.2.2
+contourpy==1.3.1
+cycler==0.12.1
 debugpy==1.8.11
 decorator==5.1.1
 defusedxml==0.7.1
+et_xmlfile==2.0.0
 executing==2.1.0
 fastjsonschema==2.21.1
+fonttools==4.55.3
 fqdn==1.5.1
 h11==0.14.0
 httpcore==1.0.7
@@ -41,7 +45,9 @@ jupyter_server_terminals==0.5.3
 jupyterlab==4.3.4
 jupyterlab_pygments==0.3.0
 jupyterlab_server==2.27.3
+kiwisolver==1.4.7
 MarkupSafe==3.0.2
+matplotlib==3.10.0
 matplotlib-inline==0.1.7
 mistune==3.0.2
 nbclient==0.10.2
@@ -51,11 +57,13 @@ nest-asyncio==1.6.0
 notebook==7.3.2
 notebook_shim==0.2.4
 numpy==2.2.1
+openpyxl==3.1.5
 overrides==7.7.0
 packaging==24.2
 pandas==2.2.3
 pandocfilters==1.5.1
 parso==0.8.4
+pillow==11.0.0
 platformdirs==4.3.6
 prometheus_client==0.21.1
 prompt_toolkit==3.0.48
@@ -63,6 +71,7 @@ psutil==6.1.1
 pure_eval==0.2.3
 pycparser==2.22
 Pygments==2.18.0
+pyparsing==3.2.0
 python-dateutil==2.9.0.post0
 python-json-logger==3.2.1
 pytz==2024.2
